--- a/Semantic/src/styles/semantic.less
+++ b/Semantic/src/styles/semantic.less
@@ -1,7 +1,5 @@
 /* We will be keeping the globals and 2 components: Button and Breadcrumbs */
 
-
-
 /* Global */
 & { @import "~semantic-ui-less/definitions/globals/reset"; }
 & { @import "~semantic-ui-less/definitions/globals/site"; }
@@ -13,7 +11,19 @@
 & { @import "~semantic-ui-less/definitions/elements/flag"; }
 & { @import "~semantic-ui-less/definitions/elements/header"; }
 & { @import "~semantic-ui-less/definitions/elements/icon"; }
+& { @import "~semantic-ui-less/definitions/elements/image"; }
+& { @import "~semantic-ui-less/definitions/elements/segment"; }
+& { @import "~semantic-ui-less/definitions/elements/list"; }
 
 /* Collections */
 & { @import "~semantic-ui-less/definitions/collections/breadcrumb"; }
 & { @import "~semantic-ui-less/definitions/collections/grid"; }
+& { @import "~semantic-ui-less/definitions/collections/menu"; }
+
+/*Modules*/
+& {
+  @import "~semantic-ui-less/definitions/modules/sidebar";
+  @import "~semantic-ui-less/definitions/modules/dropdown";
+  @import "~semantic-ui-less/definitions/modules/transition";
+}
+
